# usb-otg-workspace

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build_all
.github/workflows/: ci.yml
example-f401-board/: Cargo.toml  Embed.toml  bmp.gdb  memory.x  openocd.cfg
example-f401-board/.cargo/: config
example-f401-board/examples/: enumerate.rs  enumeration.rs  serial.rs  test_class.rs
example-f401-board/src/: main.rs
example-f407-board/: Cargo.toml  README  memory.x
example-f407-board/examples/: enumerate.rs  enumeration.rs  serial.rs  test_class.rs
example-f407-board/src/: main.rs
example-f429zi-board/: Cargo.toml  Embed.toml
example-f429zi-board/.cargo/: config
example-f429zi-board/examples/: enumerate.rs  enumeration.rs  serial.rs  test_class.rs
example-f429zi-board/src/: main.rs
example-f446re-board/: Cargo.toml  Embed.toml  memory.x  openocd.gdb
example-f446re-board/examples/: serial.rs  test_class.rs
example-f446re-board/src/: main.rs
example-f446ze-board/: Cargo.toml  memory.x  openocd.gdb
example-f446ze-board/.cargo/: config
example-f446ze-board/examples/: enumerate.rs  enumeration.rs  serial.rs  test_class.rs
example-f446ze-board/src/: main.rs
example-f723e-disco-board/: Cargo.toml  Embed.toml  openocd.cfg  openocd.gdb
example-f723e-disco-board/examples/: serial.rs  test_class.rs
example-longan-nano-board/: Cargo.toml  build.rs  openocd.gdb
example-longan-nano-board/.cargo/: config
example-longan-nano-board/examples/: serial.rs  test_class.rs
example-longan-nano-board/src/: lib.rs  main.rs
example-stlinkv3-board/: Cargo.toml  Embed.toml  memory.x  openocd.cfg  openocd.gdb
example-stlinkv3-board/.cargo/: config
example-stlinkv3-board/examples/: serial.rs  test_class.rs
example-stlinkv3-board/src/: lib.rs
example-xcore407i-board/: Cargo.toml  Embed.toml  memory.x  openocd.cfg
example-xcore407i-board/examples/: enumeration.rs  serial.rs  test_class.rs
example-xcore407i-board/src/: lib.rs  otg_hs.rs
stm32-log/: Cargo.toml
stm32-log/src/: lib.rs  log.rs  nucleo_f429zi.rs
