[workspace]

members = [
    "example-f401-board",
    "example-f407-board",
    "example-f429zi-board",
    "example-f446re-board",
    "example-f446ze-board",
    "example-f723e-disco-board",
    "example-longan-nano-board",
    "example-stlinkv3-board",
    "example-xcore407i-board",
    "stm32-log",
]

[patch.crates-io]
stm32-log = { path = "stm32-log" }
