[package]
name = "example-f401-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.2"
cortex-m-rt = "0.7.5"
usbd-serial = "0.2.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f401", "usb_fs"] }
usb-device = "0.3.0"
