[package]
name = "example-f407-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>", "Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.2"
cortex-m-rt = "0.6.10"
usbd-serial = "0.1.0"
embedded-hal = "0.2.3"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f407", "usb_fs"] }
usb-device = "0.2.2"
