[package]
name = "example-f407-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>", "Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.2"
cortex-m-rt = "0.7.1"
usbd-serial = "0.1.0"
stm32f4xx-hal = { version = "0.11.1", features = ["stm32f407", "usb_fs"] }
usb-device = "0.2.2"
