[package]
name = "example-f429zi-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.2"
cortex-m-rt = "0.6.10"
usbd-serial = "0.1.0"
embedded-hal = "0.2.3"
stm32f4xx-hal = { version = "0.5.0", features = ["stm32f429"] }
usb-device = "0.2.2"
stm32f429-usbd-fs = { version = "0.1.0", features = ["stm32f429xx"] }
stm32-log = { version = "0.1.0", features = ["nucleo-f429zi"] }
log = "0.4.8"
