[package]
name = "example-f446re-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
cortex-m-rt = "0.7.5"
usbd-serial = "0.2.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f446"] }
usb-device = "0.3.0"

[features]
fs = ['stm32f4xx-hal/usb_fs']
hs = ['stm32f4xx-hal/usb_hs']
