[package]
name = "example-longan-nano-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
riscv = "0.6.0"
riscv-rt = "0.11.0"
gd32vf103xx-hal = "0.5.0"
panic-halt = "0.2.0"
usb-device = "0.2.9"
synopsys-usb-otg = { version = "0.3.2", features = ["riscv", "fs"] }
