[package]
name = "example-longan-nano-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
riscv = "0.6.0"
riscv-rt = "0.11.0"
embedded-hal = "0.2.7"
gd32vf103xx-hal = "0.5.0"
panic-halt = "0.2.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
synopsys-usb-otg = { version = "0.3.2", features = ["riscv", "fs"] }
