[package]
name = "example-longan-nano-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
riscv = { version = "0.14.0", features = ["critical-section-single-hart"] }
riscv-rt = "0.15.0"
embedded-hal = "0.2.7"
gd32vf103xx-hal = "0.5.0"
panic-halt = "0.2.0"
usb-device = "0.3.0"
usbd-serial = "0.2.0"
synopsys-usb-otg = { version = "0.5.0", features = ["fs"] }
