[package]
name = "example-stlinkv3-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
stm32f7xx-hal = { version = "0.6.0", features = ["stm32f723"] }
nb = "0.1.2"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
usbd-serial = "0.1.0"
usb-device = "0.2.5"

[features]
fs = ["stm32f7xx-hal/usb_fs"]
hs = ["stm32f7xx-hal/usb_hs"]
