[package]
name = "example-stlinkv3-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32f7xx-hal = { version = "0.8.0", features = ["stm32f723"] }
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
usbd-serial = "0.2.0"
usb-device = "0.3.0"

[features]
fs = ["stm32f7xx-hal/usb_fs"]
hs = ["stm32f7xx-hal/usb_hs", "usb-device/test-class-high-speed"]
