[package]
name = "example-xcore407i-board"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
usbd-serial = "0.1.0"
stm32f4xx-hal = { version = "0.11.1", features = ["stm32f407"] }
usb-device = "0.2.2"
synopsys-usb-otg = { version = "0.2.4", features = ["cortex-m"] }

[features]
fs = ["stm32f4xx-hal/usb_fs", "synopsys-usb-otg/fs"]
hs = ["stm32f4xx-hal/usb_hs", "synopsys-usb-otg/hs", "usb-device/test-class-high-speed"]
