[package]
name = "stm32-log"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
stm32f4xx-hal = { version = "0.6.0", optional = true }
log = "0.4.8"
heapless = "0.5.0"
bbqueue = "0.3.2"

[features]
target-selected = []
nucleo-f429zi = ['stm32f4xx-hal/stm32f429', 'target-selected']
nucleo-f446ze = ['stm32f4xx-hal/stm32f446', 'target-selected']
